# mgtl

./: .clang-tidy  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  compile_commands.json
.github/: constants.env
.github/workflows/: codeChecker.yml
benchmarks/: CMakeLists.txt  bench.cpp  bit_array_t_popcount.cpp  bit_array_t_popcount_diffrent_size_same_size.cpp  bit_set_count_std.cpp
build_tools/: build.sh  run_benchmarks.sh  run_tests.sh
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
cmake_base/: benchmark.cmake  tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/mgtl/: sample_library.hpp
include/mgtl/bit_array/: bit_array.hpp  bit_array_details.hpp  bit_manipulator.hpp  bit_size.hpp  constants.hpp  printer.hpp  type_traits.hpp
include/mgtl/bit_array/details/: bit_array_base.hpp  bit_array_layer.hpp  (+3 more)
include/mgtl/functional/: functional.hpp
include/mgtl/type_traits/: type_traits.hpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/bit_array/: CMakeLists.txt  bit_array.cpp  bit_array_details.cpp  bit_array_details_constexpr.cpp  bit_array_layers.cpp  printer.cpp  type_traits.cpp  unittests.bit_array.cpp
test/type_traits/: CMakeLists.txt  type_traits.cpp
